# portfolio

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
apoio/: anotacoes  aulas.md  notas_de_aula.md
blog/: index.html
blog/archive/2025/: index.html
docs/: .nav.yml  backlog.md  index.md
docs/blog/: index.md
docs/blog/posts/: 01_aula14.md
docs/notas/: backlog.md  index.md
docs/notas/apoio/aulas/: aula_01.md  (+9 more)
docs/notas/aulas/: aula_02.md  aula_03.md  aula_05.md  aula_06.md  aula_07.md  aula_08.md  aula_08_extra.md  aula_10.md  aula_11.md  aula_12.md  aula_12_preliminares_gitignore.md  aula_14.md  aula_15.md
notas/: index.html
notas/aulas/aula_01/: index.html
notas/aulas/aula_02/: index.html
notas/aulas/aula_03/: index.html
notas/aulas/aula_04/: index.html
notas/aulas/aula_05/: index.html
notas/aulas/aula_06/: index.html
notas/aulas/aula_07/: index.html
notas/aulas/aula_08/: index.html
notas/aulas/aula_08_extra/: index.html
notas/aulas/aula_09/: index.html
notas/aulas/aula_10/: index.html
notas/aulas/aula_11/: index.html
notas/aulas/aula_11_extra_01/: index.html
notas/aulas/aula_11_extra_02/: index.html
notas/aulas/aula_12/: index.html
notas/aulas/aula_12_preliminares_gitignore/: index.html
notas/aulas/aula_13/: index.html
notas/aulas/aula_14/: index.html
notas/aulas/aula_15/: index.html
notas/aulas/aula_15_extra_batalha/: index.html
notas/aulas/aula_16/: index.html
search/: search_index.json
site/: 404.html  sitemap.xml
site/blog/: index.html
site/search/: search_index.json
(+13 files in other folders)
