[project]
name = "lucas-projetos"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Fainblat",email = "153224852+lucasfainblat@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material[imaging] (>=9.6.20,<10.0.0)",
    "mkdocs-section-index (>=0.3.10,<0.4.0)",
    "mkdocs-awesome-nav (>=3.2.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
